# brand-metadata-generator

./: .bedrock_agentcore.yaml  .gitignore  AGENTCORE_DEPLOYMENT_BEST_PRACTICES.md  AGENTCORE_DEPLOYMENT_HANDOVER.md  AWS_AGENTCORE_BROWSER_SOLUTION.md  CONTRIBUTING.md  CONVERSATIONAL_AGENT_NEXT_STEPS.md  CORRECTED_MCP_SETUP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_COMPLETE_INDEX.md  DOCUMENTATION_INDEX.md  FINAL_MCP_STATUS.md  HANDOVER_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_CONNECTION_GUIDE.md  PRACTICAL_COMMERCIAL_VALIDATION_SOLUTION.md  QUICK_START_TOMORROW.md  README.md  README_STRANDS_DOCS.md  SESSION_HANDOVER_SUMMARY.md  SESSION_SUMMARY_FEB16.md  SETUP_FREE_MCP_SERVERS.md  START_HERE.md  STRANDS_AGENTCORE_CHEATSHEET.md  STRANDS_AGENTCORE_SUCCESS_HANDOVER.md  STRANDS_SUCCESS_VISUAL.md  TOMORROW_QUICK_START.md  WEB_SEARCH_SOLUTION_IMPLEMENTED.md  fix_athena_permissions.py  pytest.ini  requirements.txt  setup.py  test_agent_direct.py  test_query.json  test_query_brands.py  update_router_lambda.py
agents/: __init__.py
docs/: AGENT_ARCHITECTURE_CLARIFICATION.md  AGENT_DEPLOYMENT_GUIDE.md  ATHENA_QUERYING_GUIDE.md  CI_FIXES.md  CONVERSATIONAL_AGENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  FREE_MCP_SERVERS_CORRECTED.md  FREE_MCP_SETUP.md  KIRO_MCP_TROUBLESHOOTING.md  MCP_SETUP_GUIDE.md  NAMING_CONVENTION.md  PRODUCTION_MONITORING_SETUP.md  QUICKSIGHT_DASHBOARD_SETUP.md  QUICK_START.md  QUICK_SUITE_CORRECTION_SUMMARY.md  QUICK_SUITE_SETUP.md  (+9 more)
mcp_servers/brand_registry/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
(+1055 files in other folders)
