[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-registry-mcp-server"
version = "1.0.0"
description = "MCP server for Brand Registry database access"
authors = [{name = "Brand Metadata Generator Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.9.0",
    "boto3>=1.34.0"
]

[project.scripts]
brand-registry-mcp = "brand_registry.server:main"
